# URLshortner

./: .gitignore  Dockerfile  README.md  UV_CHEATSHEET.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_urls_table.py
src/: main.py
src/api/: shortener.py
src/core/: config.py
src/db/: session.py
src/models/: __init__.py  url.py
src/schemas/: shortener.py
src/services/: shortener_service.py
